[gd_scene load_steps=11 format=3 uid="uid://2q0jumnrxatb"]

[ext_resource type="Script" path="res://client/card_face_unit.gd" id="1_fe1au"]
[ext_resource type="PackedScene" uid="uid://btaiq2ujstip6" path="res://client/stat_mark.tscn" id="1_payjs"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_02e3w"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uxl36"]
noise = SubResource("FastNoiseLite_02e3w")

[sub_resource type="LabelSettings" id="LabelSettings_0eu54"]
font_size = 96
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dh0y"]
bg_color = Color(0.686275, 0.686275, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bynux"]
font_size = 40
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nkry"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miip6"]
bg_color = Color(0.341176, 0.313726, 0.47451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sbvvc"]
font_size = 28
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="UnitCardFace" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
offset_bottom = 768.0
script = ExtResource("1_fe1au")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.541176, 0.541176, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 400.0
texture = SubResource("NoiseTexture2D_uxl36")
expand_mode = 1
stretch_mode = 6

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(48, 52)
color = Color(0, 0.501961, 1, 1)
polygon = PackedVector2Array(-24, -52, -48, -28, -40, 36, 0, 68, 40, 36, 48, -28, 24, -52)

[node name="CostLabel" type="Label" parent="Polygon2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -66.0
offset_right = 32.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_0eu54")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 384.0
offset_right = 504.0
offset_bottom = 448.0
theme_override_styles/normal = SubResource("StyleBoxFlat_5dh0y")
text = "カード名"
label_settings = SubResource("LabelSettings_bynux")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 448.0
offset_right = 480.0
offset_bottom = 688.0
theme_override_styles/normal = SubResource("StyleBoxFlat_1nkry")

[node name="AttackMark" parent="." instance=ExtResource("1_payjs")]
offset_top = 664.0
offset_bottom = 768.0
color = Color(0.815686, 0, 0, 1)

[node name="HpMark" parent="." instance=ExtResource("1_payjs")]
offset_left = 408.0
offset_top = 664.0
offset_right = 512.0
offset_bottom = 768.0
color = Color(0, 0.627451, 0, 1)
stat = 1

[node name="TraitsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 696.0
offset_right = 336.0
offset_bottom = 744.0
theme_override_styles/normal = SubResource("StyleBoxFlat_miip6")
text = "系統"
label_settings = SubResource("LabelSettings_sbvvc")
horizontal_alignment = 1
vertical_alignment = 1
